# rpg-character

./: .gitignore  CMakeLists.txt  readme.md
include/: Animator.h  Player.h  State.h
src/: Animator.cpp  Player.cpp  State.cpp  main.cpp
